# 99-Problems

./: .gitignore  README.md
c++/: CMakeLists.txt
c++/lists/: CMakeLists.txt  Lists.cpp  Lists.h
c++/test/: CMakeLists.txt  TestLists.cpp
golang/src/github.com/freakyzoidberg/common/: common.go  common_test.go
golang/src/github.com/freakyzoidberg/lists/: P01.go  P01_test.go  P02.go  P02_test.go
golang/src/github.com/freakyzoidberg/test_utils/: test_utils.go
java/: build.gradle  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/fun/pierre/lists/: P01.java  P02.java  P03.java  P04.java  P05.java  P06.java  P07.java  P08.java
java/src/test/java/fun/pierre/lists/: P01Test.java  P02Test.java  P03Test.java  P04Test.java  P05Test.java  P06Test.java  P07Test.java  P08Test.java
scala/: build.sbt
scala/src/main/scala/fun/pierre/lists/: P01.scala  P02.scala  P03.scala  P04.scala  P05.scala  P06.scala  P07.scala
scala/src/test/scala/fun/pierre/lists/: P01Test.scala  P02Test.scala  P03Test.scala  P04Test.scala  P05Test.scala  P06Test.scala  P07Test.scala
